@@ -7,6 +7,7 @@ jq-alt-overlay=Alternate item quality overlay position
 jq-quality-no-quality-items=Items to disable quality for
 jq-quality-no-quality-groups=Groups to disable quality for
 jq-quality-no-quality-subgroups=Subgroups to disable quality for
+jq-delevel-to-normal=Delevel items to multiple normals
 
 [mod-setting-description]
 jq-use-extra-bonuses=Enables several balanced quality bonuses that were not indicated in the quality FFF
@@ -17,6 +18,7 @@ jq-alt-overlay=Move the quality overlay on items to the top left
 jq-quality-no-quality-items=Names of items to disable quality for, separated by commas
 jq-quality-no-quality-groups=Names of groups of items to disable quality for, separated by commas
 jq-quality-no-quality-subgroups=Names of subgroups of items to disable quality for, separated by commas
+jq-delevel-to-normal=When enabled, all items are deleveled to several normal items. When disabled, non-science pack lose just one level.
 
 [jq]
 quality-1=Normal
